# pyo3-file

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  azure-pipelines.yml
.github/workflows/: ci.yml  release.yml
examples/path_or_file_like/: Cargo.toml  README.md  setup.py
examples/path_or_file_like/src/: lib.rs
examples/path_or_file_like/tests/: test_path_or_file_like.py
src/: lib.rs
