[package]
name = "path_or_file_like"
version = "0.1.0"
authors = ["Omer Ben-Amram <omerbenamram@gmail.com>"]
edition = "2018"

[lib]
name = "path_or_file_like"

crate-type = ["cdylib"]

[dependencies]
pyo3-file = { path = "../../" }
pyo3 = { version = ">=0.23,<0.24", features = ["extension-module", "abi3-py37"] }
